# costanza

./: .gitignore  Cargo.toml  config-example.toml
.automation/docker/ubuntu-bionic-arm-compiler/: Dockerfile
.cargo/: config.toml
.dummy-data/gcode/grbl/: homing.gcode
.github/workflows/: all.yml
src/costanza-eui/: Cargo.toml
src/costanza-eui/src/: main.rs
src/costanza-mid/: Cargo.toml
src/costanza-mid/src/: eff.rs  lib.rs  main.rs
src/costanza-mid/src/app/: mod.rs
src/costanza-mid/src/app/grbl/: mod.rs
src/costanza-mid/src/effects/: http.rs  mod.rs  serial.rs  ticker.rs
src/costanza-mid/src/effects/http/: configuration.rs  constants.rs  file_routes.rs  mod.rs  oauth.rs  sec.rs  shared_state.rs  utils.rs
src/costanza-mid/src/server/: auth_routes.rs  configuration.rs  mod.rs  sec.rs  shared_state.rs
src/costanza-ui/: .gitignore  Makefile  package-lock.json  package.json
src/costanza-ui/@types/: global.d.ts
src/costanza-ui/src/: Boot.elm  Button.elm  Environment.elm  HomePage.elm  Icon.elm  Main.elm  Routing.elm  Session.elm  StateSync.elm  boot.ts  index.xslt  main.css
