[package]
name = "costanza-mid"
version = "0.1.0"
edition = "2021"

[lib]
name = "costanza"
path = "src/lib.rs"

[[bin]]
name = "costanza-m"
path = "src/bin/costanza-mid.rs"

[[bin]]
name = "mock-grbl"
path = "src/bin/mock-grbl.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.26", features = ["derive", "cargo"] }
futures = "0.3.25"
futures-lite = "1.12.0"
jsonwebtoken = "8.1.1"
kramer = { version = "1.3.2", features = ["kramer-async"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "^1.0.87" }
serialport = { version = "^4.2.0", default-features = false }
surf = "2.3.2"
tide = "0.16.0"
tide-websockets = "0.4.0"
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["v4"] }
